# ChangeLog for sys-apps/hal
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.290 2009/07/06 14:22:44 alexxy Exp $

  06 Jul 2009; Alexey Shvetsov <alexxy@gentoo.org> hal-0.5.12_rc1-r6.ebuild:
  Add ~mips keyword

*hal-0.5.11-r9 (17 Jun 2009)

  17 Jun 2009; Thomas Anderson <gentoofan23@gentoo.org>
  +hal-0.5.11-r9.ebuild:
  Stable revision bump for critical bug #268375, wrong cache dir leading to
  broken systems when hal is installed with paludis.

  07 Jun 2009; Daniel Gryniewicz <dang@gentoo.org> hal-0.5.12_rc1-r6.ebuild:
  Update plugdev message to be more explicit

*hal-0.5.12_rc1-r6 (01 Jun 2009)

  01 Jun 2009; Daniel Gryniewicz <dang@gentoo.org>
  -hal-0.5.12_rc1-r5.ebuild, +hal-0.5.12_rc1-r6.ebuild:
  Bump to hal-0.5.12_rc1-r6

  - Add root access to org.freedesktop.Hal.(Device Manager) to allow X and
    NM to work. Bug #271837


*hal-0.5.12_rc1-r5 (29 May 2009)

  29 May 2009; Daniel Gryniewicz <dang@gentoo.org>
  -hal-0.5.12_rc1-r2.ebuild, -hal-0.5.12_rc1-r3.ebuild,
  +hal-0.5.12_rc1-r5.ebuild:
  Fix bug #267042 and bug #269897

  16 May 2009; Robin H. Johnson <robbat2@gentoo.org> hal-0.5.9.1-r3.ebuild,
  hal-0.5.11-r4.ebuild, hal-0.5.11-r8.ebuild, hal-0.5.12_rc1-r2.ebuild,
  hal-0.5.12_rc1-r3.ebuild, hal-0.5.12_rc1-r4.ebuild:
  Migration to virtual/libusb. Verified by code inspection.

*hal-0.5.12_rc1-r4 (13 May 2009)

  13 May 2009; Daniel Gryniewicz <dang@gentoo.org>
  +hal-0.5.12_rc1-r4.ebuild:
  Remove duplict file in Makefile.am; bug #267926

*hal-0.5.12_rc1-r3 (09 May 2009)

  09 May 2009; Daniel Gryniewicz <dang@gentoo.org> -hal-0.5.12_rc1.ebuild,
  +hal-0.5.12_rc1-r3.ebuild:
  Bump to hal-0.5.12_rc1-r3
  - Add more missing dbus policy. This is now equivalent to what Fedora ships,
    so it should be fairly complete.
  - Fix bad consolekit enabling; bug #268376

  02 May 2009; Daniel Gryniewicz <dang@gentoo.org> hal-0.5.12_rc1-r2.ebuild: