@@ -67,6 +67,7 @@ DIST hal-0.5.11-gentoo-patches-5.tar.bz2 8890 RMD160 ffa1ae251baa8caff74f343f985
 DIST hal-0.5.11.tar.bz2 1281251 RMD160 741cfe82f0bc2d67106b24cfe526a754ab36e45f SHA1 1ddb7895d2ddc2464b553ad11f7ba38860478ae9 SHA256 78a2621209b2db4d71f25fe3a7df7b7dd4b5e866e9c699454b78e611def065cf
 DIST hal-0.5.12rc1-gentoo-patches-5.tar.bz2 4014 RMD160 dab46cd7efb0099be1961970261ec03ea3d6291a SHA1 55a4171b6df37f89df7b9baa0a9f6c19ccb4137a SHA256 339030bf17d4fc5eb4fe42ac9b2267e4bf2a6c1f27267f0666e1f4b18e59dfae
 DIST hal-0.5.12rc1-gentoo-patches-7.tar.bz2 4163 RMD160 deeddd0d71a53667a7aa17b049617a02a7728750 SHA1 e04dfe3c1d78c908bf7df0bb2385545b2fee4f8e SHA256 9ad8a7d8871e2fbfbdd5bf956d8b20001a3474f71b6ec552bcb5902c8a5a1463
+DIST hal-0.5.12rc1-gentoo-patches-8.tar.bz2 4196 RMD160 d503c42a03cca62fab12f3dc15897b20ce8fe37d SHA1 c3782090d2b8a1f0c69e58454a868896618e58a1 SHA256 6e5b3121ebaed2208ad30cd5778ead921e6480c06270da0aac78522a204cdc86
 DIST hal-0.5.12rc1.tar.bz2 1160384 RMD160 dce660d600c18bfd910814516b675f141d369824 SHA1 1dc809e98cea0fc2f183958da24921c2eaf55edc SHA256 eeeb438dcc2a58288ed3def8c1d0076ca16f35b54d501c46f96e89da24fe38f4
 DIST hal-0.5.9.1-r2.tar.bz2 4246 RMD160 2b1646289c23db868bd969f7ae851e6c2d317bad SHA1 32db287e0eff7f4754b89633909daf0f6e957009 SHA256 f28ed6e02df926ef485fff79587856eb0155c747e311d83d1b6b5e3a25b924c2
 DIST hal-0.5.9.1.tar.gz 1596347 RMD160 4f1f8b9513d4e168d4d043970c062cc9084f554f SHA1 fc29322a0beba73c2eab3e0a44f9b820a5fbccdd SHA256 5dc5cf08502510a00cecd6e04ef006a74ba7ed4b31d25187b5efadd70a78733b
@@ -75,13 +76,14 @@ EBUILD hal-0.5.11-r8.ebuild 8898 RMD160 ea2eb3ac5b3fa3cafbd740a420d4b9c334ae2fcd
 EBUILD hal-0.5.11-r9.ebuild 8893 RMD160 82350f2795c3be604aabd4d67fefbf45b98a742e SHA1 1f47d075d01d759b7bf287ba3f4b4bb8cad19b2d SHA256 af6589feba9fb9395f7d1e23bede156800fe3a870b94750c48c31c6a5572e5e8
 EBUILD hal-0.5.12_rc1-r4.ebuild 9457 RMD160 8c36a4e6afd426a17b68c73fb74e70aba18e2f64 SHA1 6e6c100839df5e85af09314e0ae3a83d6acefb60 SHA256 14046c9f90489f57e96319c645ed89dbdbd2dff7393fb6b41ed37b76443fcbf1
 EBUILD hal-0.5.12_rc1-r6.ebuild 9821 RMD160 3861e904a70e10534fbde7af2c2c88f46f154c5d SHA1 c91f15233b0af3fd5661ae66a58646317d9a606e SHA256 f367e528a48ecdf93bd1334299462ec093e8674810b567ceaa9b747f9038b634
+EBUILD hal-0.5.12_rc1-r7.ebuild 9819 RMD160 c7565228183c9e066ec6cdf4be1223ba8776a61a SHA1 81834c54e4daf1197db82b18482f5c26fbaa0e52 SHA256 d0a42e57f36a507e8bfb11cc24a600aeddb8df75485ff7eafdd634a80c7f9387
 EBUILD hal-0.5.9.1-r3.ebuild 6696 RMD160 ef27a83167b45d014a5c165f74c6f9c951577edb SHA1 84bd6a256c6ad2eba888aed3c88869b2de2954bb SHA256 aee788e6497051c4c2a89478f31d49cdcb024b2fa216e0d7db9ef2f6a1a1a186
-MISC ChangeLog 49236 RMD160 8c6eeaf2cb1cadfc1db915f4ff4b666ef6604682 SHA1 df07d61e545433f94000a6691859951da47b3229 SHA256 9163d54686c7753cdf2e6a91b079af72986c473d79c1b2f6728a876a336e34e2
+MISC ChangeLog 49462 RMD160 1c495b066897f1e9704fd158d001468b5609e51a SHA1 0f02b84b1b1e4d4e09e62a8b75346e4986e172b6 SHA256 60089ca955204d1256323f0a1e050425c0e08047def7d251522d46cba88c1692
 MISC metadata.xml 2155 RMD160 1fcdfa6184292a67ea656d4f7ccb088fc6bdd1ae SHA1 9f176d6b9b599758551116a9e373f03450d861a6 SHA256 149100f02d310a485d9d543ec0bdf0848fbd079b813a6f8bb7e2f1a53790ebce
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkpSCPcACgkQ5BmOA85PVLibtgCePSkD4b9PjexTnddRx/zj2aLq
-zzAAn3R7mvwXoaaIx7KjquL4obBQgCbd
-=MhT3
+iD8DBQFKYzz9omPajV0RnrERAu+xAJ4+33prCmlG/aKEs5OWe8ZM7756VQCfVqW3
+4Tm87w7iMyRe0T4aBTRwf3k=
+=+lJI
 -----END PGP SIGNATURE-----
