@@ -1,6 +1,16 @@
 # ChangeLog for sys-apps/hal
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.290 2009/07/06 14:22:44 alexxy Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.291 2009/07/19 15:33:19 dang Exp $
+
+*hal-0.5.12_rc1-r7 (19 Jul 2009)
+
+  19 Jul 2009; Daniel Gryniewicz <dang@gentoo.org>
+  +hal-0.5.12_rc1-r7.ebuild:
+  Bump to hal-0.5.12_rc1-r7
+
+  - Give root access to some things in plugdev mode. Bug #276997 and bug
+  #273907
+
 
   06 Jul 2009; Alexey Shvetsov <alexxy@gentoo.org> hal-0.5.12_rc1-r6.ebuild:
   Add ~mips keyword
